refactor: 스웨거에 dev 서버 추가